@@ -420,11 +420,7 @@ class TestTableJoin(unittest.TestCase):
         self.assertEqual(len(new_table.columns), 6)
 
     def test_left_outer_join(self):
-        new_table = self.left.left_outer_join(
-            lambda lr: lr['one'], 
-            self.right,
-            lambda rr: rr['four']
-        )
+        new_table = self.left.left_outer_join('one', self.right, 'four')
 
         self.assertEqual(len(new_table.rows), 3)
         self.assertEqual(len(new_table.columns), 6)
@@ -434,11 +430,7 @@ class TestTableJoin(unittest.TestCase):
         self.assertSequenceEqual(new_table.rows[2], (None, 2, 'c', None, 2, 'c'))
 
     def test_left_outer_join2(self):
-        new_table = self.left.left_outer_join(
-            lambda lr: lr['one'], 
-            self.right,
-            lambda rr: rr['five']
-        )
+        new_table = self.left.left_outer_join('one', self.right, 'five')
 
         self.assertEqual(len(new_table.rows), 3)
         self.assertEqual(len(new_table.columns), 6)
@@ -446,6 +438,20 @@ class TestTableJoin(unittest.TestCase):
         self.assertSequenceEqual(new_table.rows[0], (1, 4, 'a', None, None, None))
         self.assertSequenceEqual(new_table.rows[1], (2, 3, 'b', None, 2, 'c'))
         self.assertSequenceEqual(new_table.rows[2], (None, 2, 'c', None, None, None))
+
+    def test_left_outer_func(self):
+        new_table = self.left.left_outer_join(
+            lambda left: '%i%s' % (left['two'], left['three']),
+            self.right,
+            lambda right: '%i%s' % (right['five'], right['six'])
+        )
+
+        self.assertEqual(len(new_table.rows), 3)
+        self.assertEqual(len(new_table.columns), 6)
+
+        self.assertSequenceEqual(new_table.rows[0], (1, 4, 'a', 1, 4, 'a'))
+        self.assertSequenceEqual(new_table.rows[1], (2, 3, 'b', 2, 3, 'b'))
+        self.assertSequenceEqual(new_table.rows[2], (None, 2, 'c', None, 2, 'c'))
 
 class TestTableData(unittest.TestCase):
     def setUp(self):
